# gd-mod-example

./: .editorconfig  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  Tutorial.md
src/: custom-layer.cpp  custom-layer.hpp  dllmain.cpp  hook_utils.cpp  hook_utils.hpp  includes.h  utils.hpp
